# hw3-kayajuicee

./: Makefile  myst.yml  pyproject.toml
.github/workflows/: myst-deploy.yml  pages.yml
_build/html/: config.json  index.html  index.json  losc-event-tutorial.json  myst.search.json
_build/html/losc-event-tutorial/: index.html
_build/site/content/: hw03-description.json  index.json  losc-event-tutorial.json  readme.json
ligotools/: __init__.py  utils.py
ligotools.egg-info/: PKG-INFO  requires.txt
ligotools/tests/: test_readligo.py  test_utils.py
